<resources>
    <string name="app_name">Samuca Inventários</string>
    <string name="login">Login</string>
    <string name="title_product_register">Cadastro de Produto</string>
    <string name="title_product_edition">Edição de Produto</string>
    <string name="title_product_update">Atualização de Produto</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="category">Categoria</string>
    <string name="brand">Marca</string>
    <string name="quantity">Quantidade</string>
    <string name="provider">Fornecedora</string>
    <string name="bar_code">Código de Barras</string>
    <string name="fabrication_date">Data de Fabricação</string>
    <string name="expiration_date">Data de Validade</string>
    <string name="date_format">DD/MM/AAAA</string>
    <string name="title_search_product_filter">Filtragem de Produto</string>
    <string name="id">ID</string>
    <string name="inclusion_date">Data de Inclusão</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="title_product_info">Informações do Produto</string>
    <string name="title_app_name">Inventário Digital</string>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>
    <string name="ERROR_EXPIRED_LOGIN">Seu login expirou. Faça login novamente.</string>
    <string name="title_biometric_authetication">Autenticação biométrica</string>
    <string name="cancel">Cancelar</string>
    <string name="point_the_camera">Aponte a câmera para o QRCode.</string>
    <string name="camera_unavailable">Câmera indisponível.</string>
    <string name="incompatible_qr_code">QR Code incompatível.</string>
    <string name="qr_code_was_not_read">QR Code não foi lido.</string>
    <string name="product_successfully_registered">Produto cadastrado com sucesso.</string>
    <string name="remove_product_title">Remoção de produto</string>
    <string name="remove_product_message">Deseja realmente remover o produto?</string>
    <string name="yes">Sim</string>
    <string name="product_removed_successfully">Produto removido com sucesso!</string>
    <string name="product_edited_successfully">Produto alterado com sucesso!</string>

</resources>