<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.ProductInfoActivity">

    <TextView
        android:id="@+id/text_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title_product_info"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/text_bar"
        app:layout_constraintStart_toStartOf="@id/text_bar"
        app:layout_constraintTop_toTopOf="@id/text_bar" />

    <ImageButton
        android:id="@+id/image_garbage"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:padding="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_delete_sweep"
        app:layout_constraintBottom_toBottomOf="@id/text_bar"
        app:layout_constraintEnd_toEndOf="@id/text_bar"
        app:layout_constraintTop_toTopOf="@id/text_bar" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_id"
                style="@style/TextViewFormDescription"
                android:layout_marginTop="0dp"
                android:text="@string/id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_id_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_id" />

            <TextView
                android:id="@+id/text_name"
                style="@style/TextViewFormDescription"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_id_value" />

            <TextView
                android:id="@+id/text_name_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_name" />

            <TextView
                android:id="@+id/text_description"
                style="@style/TextViewFormDescription"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name_value" />

            <TextView
                android:id="@+id/text_description_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_description" />

            <TextView
                android:id="@+id/text_category"
                style="@style/TextViewFormDescription"
                android:text="@string/category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_description_value" />

            <TextView
                android:id="@+id/text_category_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_category" />

            <TextView
                android:id="@+id/text_brand"
                style="@style/TextViewFormDescription"
                android:text="@string/brand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_category_value" />

            <TextView
                android:id="@+id/text_brand_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_brand" />

            <TextView
                android:id="@+id/text_quantity"
                style="@style/TextViewFormDescription"
                android:text="@string/quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_brand_value" />

            <TextView
                android:id="@+id/text_quantity_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_quantity" />

            <TextView
                android:id="@+id/text_provider"
                style="@style/TextViewFormDescription"
                android:text="@string/provider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_quantity_value" />

            <TextView
                android:id="@+id/text_provider_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_provider" />

            <TextView
                android:id="@+id/text_bar_code"
                style="@style/TextViewFormDescription"
                android:text="@string/bar_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_provider_value" />

            <TextView
                android:id="@+id/text_bar_code_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_bar_code" />

            <TextView
                android:id="@+id/text_fabrication_date"
                style="@style/TextViewFormDescription"
                android:text="@string/fabrication_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_bar_code_value" />

            <TextView
                android:id="@+id/text_fabrication_date_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_fabrication_date" />

            <TextView
                android:id="@+id/text_expiration_date"
                style="@style/TextViewFormDescription"
                android:text="@string/expiration_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_fabrication_date_value" />

            <TextView
                android:id="@+id/text_expiration_date_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_expiration_date" />

            <TextView
                android:id="@+id/text_inclusion_date"
                style="@style/TextViewFormDescription"
                android:text="@string/inclusion_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_expiration_date_value" />

            <TextView
                android:id="@+id/text_inclusion_date_value"
                style="@style/TextViewFormValues"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_inclusion_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_mode_edit" />


</androidx.constraintlayout.widget.ConstraintLayout>